# space-game-asyncio

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: linter_check.yml
space_game/: canvas_tools.py  game.py  main.py  settings.py  space_garbage.py  spaceship.py  stars.py  utils.py
