[tool.poetry]
name = "space-game"
version = "0.1.0"
description = ""
authors = ["Artem Nechai <lenikol95@mail.ru>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"

[tool.poetry.scripts]
space-game = "space_game.game:main"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
isort = "^5.10.1"
wemake-python-styleguide = "^0.16.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
